--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <header class="main__header">
             Добавление товара
         </header>
-        <div class="main__addProduct"></div>
+        <div class="main__addProduct">
+        </div>
         <div class="main__products"></div>
     </div>
     <script src="./bundle/bundle.js"></script>
