--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div class="main">
         <header class="main__header">
-            Добавление товара
+            <p>Добавление товара</p>
+            <div class="main__header__default">
+                По умолчанию
+                <span><</span>
+            </div>
         </header>
         <div class="main__addProduct">
         </div>
-        <div class="main__products"></div>
+        <div class="main__products">
+        </div>
     </div>
     <script src="./bundle/bundle.js"></script>
 </body>
+
 </html>
